about us & contact us done

--- a/userPages/aboutUs.html
+++ b/userPages/aboutUs.html
@@ -85,7 +85,21 @@
 
     <!-- Begin page content -->
     <main class="flex-shrink-0">
-      your code here
+      <div class="p-5 mb-4 bg-light rounded-3">
+      <div class="container-fluid py-5">
+        <h1 class="display-5 fw-bold">What is Fruit Fantasy</h1>
+        <p class="col-md-10 fs-10" id="aboutUsP">Fruit Fantasy (Innovative Retail Concepts Private Limited) is Bangladesh's largest online food and grocery store. With over 18,000 products and over a 1000 brands in our catalogue you will find everything you are looking for. Right from fresh Fruits and Vegetables, Rice and Dals, Spices and Seasonings to Packaged products, Beverages, Personal care products, Meats – we have it all.
+Choose from a wide range of options in every category, exclusively handpicked to help you find the best quality available at the lowest prices. Select a time slot for delivery and your order will be delivered right to your doorstep, anywhere in Bangladesh. Tricity You can pay online using your debit / credit card or by cash / sodexo on delivery.
+We guarantee on time delivery, and the best quality!</p>
+        
+      </div>
+    </div>
+    <div class="p-5 mb-4 bg-light rounded-3">
+      <div class="container-fluid py-5">
+        <h1 class="display-5 fw-bold">Why should I use Fruit Fantasy?</h1>
+        <p class="col-md-10 fs-10" id="aboutUsP">Fruit Fantasy allows you to walk away from the drudgery of grocery shopping and welcome an easy relaxed way of browsing and shopping for groceries. Discover new products and shop for all your food and grocery needs from the comfort of your home or office. No more getting stuck in traffic jams, paying for parking, standing in long queues and carrying heavy bags – get everything you need, when you need, right at your doorstep. Food shopping online is now easy as every product on your monthly shopping list, is now available online at Fruit Fantasy, Bangladesh's best online grocery store.</p>
+      </div>
+    </div>
     </main>
 
     <footer class="footer mt-auto py-3 bg-light">
