--- a/userPages/appleCategory.html
+++ b/userPages/appleCategory.html
@@ -62,8 +62,8 @@
               </ul>
             </li>
             </ul>
-            <form class="d-flex"><a href="./userPages/signin.html"><i class="fa-solid fa-arrow-right-to-bracket"> Login</i></a>
-            <form class="d-flex"><a href="./userPages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+            <form class="d-flex"><a href="./signin.html"><i class="fa-solid fa-arrow-right-to-bracket"> Login</i></a>
+            <form class="d-flex"><a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
             </form>
           </div>
         </div>
@@ -106,7 +106,7 @@
             </p>
           </div>
           <div class="col-4 footerLinks">
-            <a href=".aboutUs.html">About Us</a>
+            <a href="./aboutUs.html">About Us</a>
             <a href="./contactUs.html">Contact Us</a>
           </div>
         </div>
