--- a/userPages/contactUs.html
+++ b/userPages/contactUs.html
@@ -62,8 +62,8 @@
               </ul>
             </li>
             </ul>
-            <form class="d-flex"><a href="./userPages/signin.html"><i class="fa-solid fa-arrow-right-to-bracket"> Login</i></a>
-            <form class="d-flex"><a href="./userPages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+            <form class="d-flex"><a href="./signin.html"><i class="fa-solid fa-arrow-right-to-bracket"> Login</i></a>
+            <form class="d-flex"><a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
             </form>
           </div>
         </div>
@@ -85,7 +85,13 @@
 
     <!-- Begin page content -->
     <main class="flex-shrink-0">
-      your code here
+      <!--Google map-->
+      <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3648.5825637296184!2d90.39779971538616!3d23.868952490152996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c55251220de1%3A0x252d0802e97850b3!2sPONDIT!5e0!3m2!1sen!2sbd!4v1660667751152!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        
+      </div>
+
+<!--Google Maps-->
     </main>
 
     <footer class="footer mt-auto py-3 bg-light">
@@ -106,7 +112,7 @@
             </p>
           </div>
           <div class="col-4 footerLinks">
-            <a href=".aboutUs.html">About Us</a>
+            <a href="./aboutUs.html">About Us</a>
             <a href="./contactUs.html">Contact Us</a>
           </div>
         </div>
