apple category done

--- a/userPages/appleCategory.html
+++ b/userPages/appleCategory.html
@@ -85,7 +85,188 @@
 
     <!-- Begin page content -->
     <main class="flex-shrink-0">
-      your code here
+      <div class="col-11 category">
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+              <div class="col">
+                <div class="card">
+                  <img
+                    src="../img/pinkLadyApple.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Pink Lady</h5>
+                    <p class="card-text">
+                      This is a longer card with supporting text below as a
+                      natural lead-in to additional content. This content is a
+                      little bit longer.
+                    </p>
+                  </div>
+                </div>
+                <a href="pinkLadyApple.html" class="btn btn-secondary">View</a>
+                <button
+                  type="button"
+                  onclick="addToCart()"
+                  class="btn btn-success"
+                  id="cartAdd"
+                >
+                  <i class="fa-solid fa-cart-plus"></i>
+                </button>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <img
+                    src="../img/bramleyApple.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Bramley</h5>
+                    <p class="card-text">
+                      This is a longer card with supporting text below as a
+                      natural lead-in to additional content. This content is a
+                      little bit longer.
+                    </p>
+                  </div>
+                </div>
+                <a href="pinkLadyApple.html" class="btn btn-secondary">View</a>
+                <button
+                  type="button"
+                  onclick="addToCart()"
+                  class="btn btn-success"
+                  id="cartAdd"
+                >
+                  <i class="fa-solid fa-cart-plus"></i>
+                </button>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <img
+                    src="../img/redDeliciousApple.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Red Delicious</h5>
+                    <p class="card-text">
+                      This is a longer card with supporting text below as a
+                      natural lead-in to additional content. This content is a
+                      little bit longer.
+                    </p>
+                  </div>
+                </div>
+                <a href="pinkLadyApple.html" class="btn btn-secondary">View</a>
+                <button
+                  type="button"
+                  onclick="addToCart()"
+                  class="btn btn-success"
+                  id="cartAdd"
+                >
+                  <i class="fa-solid fa-cart-plus"></i>
+                </button>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <img
+                    src="../img/goldenDeliciousApple.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Golden Delicious</h5>
+                    <p class="card-text">
+                      This is a longer card with supporting text below as a
+                      natural lead-in to additional content.
+                    </p>
+                  </div>
+                </div>
+                <a href="pinkLadyApple.html" class="btn btn-secondary">View</a>
+                <button
+                  type="button"
+                  onclick="addToCart()"
+                  class="btn btn-success"
+                  id="cartAdd"
+                >
+                  <i class="fa-solid fa-cart-plus"></i>
+                </button>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <img
+                    src="../img/coxApple.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Cox</h5>
+                    <p class="card-text">
+                      This is a longer card with supporting text below as a
+                      natural lead-in to additional content.
+                    </p>
+                  </div>
+                </div>
+                <a href="pinkLadyApple.html" class="btn btn-secondary">View</a>
+                <button
+                  type="button"
+                  onclick="addToCart()"
+                  class="btn btn-success"
+                  id="cartAdd"
+                >
+                  <i class="fa-solid fa-cart-plus"></i>
+                </button>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <img
+                    src="../img/braeburnApple.png"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Braeburn</h5>
+                    <p class="card-text">
+                      This is a longer card with supporting text below as a
+                      natural lead-in to additional content.
+                    </p>
+                  </div>
+                </div>
+                <a href="pinkLadyApple.html" class="btn btn-secondary">View</a>
+                <button
+                  type="button"
+                  onclick="addToCart()"
+                  class="btn btn-success"
+                  id="cartAdd"
+                >
+                  <i class="fa-solid fa-cart-plus"></i>
+                </button>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <img
+                    src="../img/royalGalaApple.jpeg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Royal Gala</h5>
+                    <p class="card-text">
+                      This is a longer card with supporting text below as a
+                      natural lead-in to additional content.
+                    </p>
+                  </div>
+                </div>
+                <a href="pinkLadyApple.html" class="btn btn-secondary">View</a>
+                <button
+                  type="button"
+                  onclick="addToCart()"
+                  class="btn btn-success"
+                  id="cartAdd"
+                >
+                  <i class="fa-solid fa-cart-plus"></i>
+                </button>
+              </div>
+            </div>
+          </div>
     </main>
 
     <footer class="footer mt-auto py-3 bg-light">
