--- a/userPages/cart.html
+++ b/userPages/cart.html
@@ -62,8 +62,8 @@
               </ul>
             </li>
             </ul>
-            <form class="d-flex"><a href="./userPages/signin.html"><i class="fa-solid fa-arrow-right-to-bracket"> Login</i></a>
-            <form class="d-flex"><a href="./userPages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+            <form class="d-flex"><a href="./signin.html"><i class="fa-solid fa-arrow-right-to-bracket"> Login</i></a>
+            <form class="d-flex"><a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
             </form>
           </div>
         </div>
@@ -85,7 +85,105 @@
 
     <!-- Begin page content -->
     <main class="flex-shrink-0">
-      your code here
+      <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="cart-table clearfix">
+                            <table class="table table-responsive">
+                                <thead>
+                                    <tr>
+                                        <th>Product</th>
+                                        <th>Price</th>
+                                        <th>Quantity</th>
+                                        <th>Total</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td class="cart_product_img d-flex align-items-center">
+                                            <a href="#"><img src="../img/apple.jpg" alt="Product"></a>
+                                            <h6>Yellow Cocktail Dress</h6>
+                                        </td>
+                                        <td class="price"><span>49.88 tk</span></td>
+                                        <td class="qty">
+                                            <div class="quantity">
+                                                <span class="qty-minus" ><i class="fa fa-minus" aria-hidden="true"></i></span>
+                                                <input type="number" class="qty-text" id="qty" step="1" min="1" max="99" name="quantity" value="1">
+                                                <span class="qty-plus" onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty )) effect.value++;return false;"><i class="fa fa-plus" aria-hidden="true"></i></span>
+                                            </div>
+                                        </td>
+                                        <td class="total_price"><span>49.88 tk</span></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+
+                        <div class="cart-footer d-flex mt-30">
+                            <div class="back-to-shop w-50">
+                                <a href="../index.html" class="btn btn-secondary">Continue Shopping</a>
+                            </div>
+                            <div class="update-checkout w-50 text-right">
+                                <a href="#" class="btn btn-secondary">clear cart</a>
+                                <a href="#" class="btn btn-secondary">Update cart</a>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="coupon-code-area mt-70">
+                            <div class="cart-page-heading">
+                                <h5>Cupon code</h5>
+                                <p>Enter your cupone code</p>
+                            </div>
+                            <form action="#">
+                                <input type="search" name="search" placeholder="#569ab15">
+                                <button type="submit">Apply</button>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="shipping-method-area mt-70">
+                            <div class="cart-page-heading">
+                                <h5>Shipping method</h5>
+                                <p>Select the one you want</p>
+                            </div>
+
+                            <div class="custom-control custom-radio mb-30">
+                                <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input">
+                                <label class="custom-control-label d-flex align-items-center justify-content-between" for="customRadio1"><span>Next day delivery</span><span>4.99 tk</span></label>
+                            </div>
+
+                            <div class="custom-control custom-radio mb-30">
+                                <input type="radio" id="customRadio2" name="customRadio" class="custom-control-input">
+                                <label class="custom-control-label d-flex align-items-center justify-content-between" for="customRadio2"><span>Standard delivery</span><span>1.99 tk</span></label>
+                            </div>
+
+                            <div class="custom-control custom-radio">
+                                <input type="radio" id="customRadio3" name="customRadio" class="custom-control-input">
+                                <label class="custom-control-label d-flex align-items-center justify-content-between" for="customRadio3"><span>Personal Pickup</span><span>Free</span></label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <div class="cart-total-area mt-70">
+                            <div class="cart-page-heading">
+                                <h5>Cart total</h5>
+                                <p>Final info</p>
+                            </div>
+
+                            <ul class="cart-total-chart">
+                                <li><span>Subtotal</span> <span>59.90 tk</span></li>
+                                <li><span>Shipping</span> <span>Free</span></li>
+                                <li><span><strong>Total</strong></span> <span><strong>59.90 tk</strong></span></li>
+                            </ul>
+                            <a href="checkout.html" class="btn karl-checkout-btn">Proceed to checkout</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </main>
 
     <footer class="footer mt-auto py-3 bg-light">
@@ -106,7 +204,7 @@
             </p>
           </div>
           <div class="col-4 footerLinks">
-            <a href=".aboutUs.html">About Us</a>
+            <a href="./aboutUs.html">About Us</a>
             <a href="./contactUs.html">Contact Us</a>
           </div>
         </div>
